<resources>
    <string name="app_name">RecipeHub</string>
    <string name="welcome_message">Discover, share, and enjoy a world of flavors at your fingertips! Whether you\'re a seasoned chef or just starting out in the kitchen, RecipeHub is here to inspire you with thousands of mouthwatering recipes from around the globe. Search by ingredients, explore new cuisines, and save your favorite dishes for easy access. Join our vibrant community of food lovers and bring your culinary creations to life.</string>
    <string name="welcome">Welcome to RecipeHub!</string>
    <string name="lets_start">Let’s get cooking! 🍳</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="recipes">Recipes</string>
    <string name="profile">Profile</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipe_title">Recipe title</string>
    <string name="recipe_description">Recipe description</string>
    <string name="recipe_keywords">Recipe keywords</string>
    <string name="keywords">Keywords:</string>
    <string name="add_recipe">Add recipe</string>
    <string name="create_new_recipe">Create new recipe</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="image_url">Image URL</string>
    <string name="save">Save</string>
    <string name="nutrition">Nutrition</string>
    <string name="quantity">Quantity</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="fiber">Fiber</string>
    <string name="sugar">Sugar</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fat">Fat</string>
    <string name="add_nutritions">Add nutritions</string>
    <string name="profile_image">Profile Image</string>
</resources>