<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@color/md_theme_onBackground"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView android:textFontWeight="96" android:text="@string/nutrition" />
            <TextView android:textFontWeight="64" android:text="@string/quantity" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView android:text="@string/calories" />
            <TextView android:id="@+id/nutritionCalories" android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView android:text="@string/protein" />
            <TextView android:id="@+id/nutritionProtein" android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView android:text="@string/fat" />
            <TextView android:id="@+id/nutritionFat" android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView android:text="@string/carbohydrates" />
            <TextView android:id="@+id/nutritionCarbohydrates" android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView android:text="@string/sugar" />
            <TextView android:id="@+id/nutritionSugar" android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView android:text="@string/fiber" />
            <TextView android:id="@+id/nutritionFiber" android:text="" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>